# Router

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test-tdd.sh
src/: main.cpp  main_test.cpp
src/router/: Type.hpp
src/router/dns/: DNSParser.cpp  DNSParser.hpp  ServerDNS.cpp  ServerDNS.hpp
src/router/http/: RequestHttp.hpp
src/router/math/: BinaryCheck.hpp  Hash.cpp  Hash.hpp  map_interval.hpp  sha1.cpp  sha1.hpp  sha256.cpp  sha256.hpp
src/router/net/: Address.hpp  Error.hpp  Packet.hpp  PacketStack.hpp  Socket.cpp  Socket.hpp  TCPSocket.hpp  TypeSocket.hpp  UDPSocket.cpp  UDPSocket.hpp  addr.hpp  testSocket.hpp
src/router/net/UDP/: Secure.hpp  UDPSocket.cpp  UDPSocket.hpp
src/router/proxy/: HttpParser.cpp  HttpParser.hpp  ServerProxy.cpp  ServerProxy.hpp
src/test/: test.hpp
